--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ Deadline: 2023-03-17 kl. 14.00 (Man får lämna in innan deadline) -->
     <meta name="description" content="Lukas Chyle crazy bulldog programmer">
     <title>About</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    
 </head>
 
 <body>
@@ -44,31 +45,41 @@ Deadline: 2023-03-17 kl. 14.00 (Man får lämna in innan deadline) -->
         <a href="https://github.com/LukasChyle" target="_blank" rel="norefferer">GitHub</a>
     </nav>
 
-    <div class="main-wrapper">
-        <h1 class="profile-name" >Lukas Chyle</h1>
-        <img src="images\CrazyBulldog.png" alt="Profile picture">
-    <p class="introduction">
-        Hello there, I'm Lukas, the craziest bulldog you'll ever meet. <br> I may look tough on the
-        outside, but on the inside, I'm a programming genius. <br><br> When I'm not chewing on my favorite toy bone or
-        napping, I'm busy coding the next big thing. <br>
-        I love programming because it allows me to use my creativity and problem-solving skills to develop new software
-        and applications. <br> I'm constantly learning new programming languages and techniques, and I'm always up for a
-        challenge. <br><br>
-        Sometimes my programming work can be frustrating, and when that happens, I let off steam by running around the
-        house and barking at nothing. <br> My owners think it's hilarious, but I know it's just a way to clear my head
-        and get back to work. <br><br>
-        Despite my crazy behavior, I take my programming work seriously. <br> I may not be able to type with my paws,
-        but I'm a master at dictation and can write lines of code faster than most humans. <br> I'm always looking for
-        ways to push the limits and create something truly epic. <br><br>
-        In the end, whether I'm coding or running around like a maniac, I'm just a lovable bulldog with a passion for
-        technology. <br><br> Woof woof!
-    </p>
-</div>
+    <h1 class="profile-name">Lukas Chyle</h1>
 
-<footer>  
-    <hr>
-    Copyright &copy; 2023 - Lukas Chyle - lukas.chyle@yh.nackademin.se
-</footer>  
+
+    <div>
+        <img src="images\crazybulldog.png" alt="Profile picture">
+        <p class="introduction">
+            Hello there, I'm Lukas, the craziest bulldog you'll ever meet. <br> I may look tough on the
+            outside, but on the inside, I'm a programming genius. <br><br> When I'm not chewing on my favorite toy bone
+            or
+            napping, I'm busy coding the next big thing. <br>
+            I love programming because it allows me to use my creativity and problem-solving skills to develop new
+            software
+            and applications. <br> I'm constantly learning new programming languages and techniques, and I'm always up
+            for a
+            challenge. <br><br>
+            Sometimes my programming work can be frustrating, and when that happens, I let off steam by running around
+            the
+            house and barking at nothing. <br> My owners think it's hilarious, but I know it's just a way to clear my
+            head
+            and get back to work. <br><br>
+            Despite my crazy behavior, I take my programming work seriously. <br> I may not be able to type with my
+            paws,
+            but I'm a master at dictation and can write lines of code faster than most humans. <br> I'm always looking
+            for
+            ways to push the limits and create something truly epic. <br><br>
+            In the end, whether I'm coding or running around like a maniac, I'm just a lovable bulldog with a passion
+            for
+            technology. <br><br> Woof woof!
+        </p>
+    </div>
+
+    <footer>
+        <hr>
+        Copyright &copy; 2023 - Lukas Chyle - lukas.chyle@yh.nackademin.se
+    </footer>
 </body>
 
 </html>
