--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
     <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
     <nav class="header">
         <a href="index.html">Introduction</a>
@@ -19,9 +21,38 @@
         <a href="https://github.com/LukasChyle" target="_blank" rel="norefferer">GitHub</a>
     </nav>
 
-    <footer>  
+    <div class="get-in-touch">
+        <h1>Get in touch</h1>
+        <p>
+            Want to get in touch? I'd love to hear from you. <br>
+            Here's how you can reach me.
+        </p>
+    </div>
+
+    <div class="contact">
+        <div>
+            <h2>Luksa Chyle</h2>
+            <h3>Current residence: Lund, Sweden</h3>
+            <a href="mailto: lukas.chyle@yh.nackademin.se">lukas.chyle@yh.nackademin.se</a>
+        </div>
+
+        <div>
+            <p>
+                One of my favorit parks, <br> I give it 4 / 5 hotdogs rating.
+            </p>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2246.8279616206673!2d13.182030734887697!3d55.726741899999986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465396282aa6a359%3A0x7cccf3b37f5dbd1c!2sDog%20Park!5e0!3m2!1sen!2sse!4v1678987597345!5m2!1sen!2sse"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </div>
+
+    <footer>
         <hr>
         Copyright &copy; 2023 - Lukas Chyle - lukas.chyle@yh.nackademin.se
-    </footer> 
+    </footer>
 </body>
+
 </html>
