--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,3 @@
-<!-- Kontakt (spara filen som contact.html)
-• Skriv dina kontaktuppgifter (t.ex. namn, mobil, e-post).
-• Visa din adress som en karta från Google Maps i en iFrame. -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -31,9 +27,9 @@
 
     <div class="contact">
         <div>
-            <h2>Luksa Chyle</h2>
+            <h2>Lukas Chyle</h2>
             <h3>Current residence: Lund, Sweden</h3>
-            <a href="mailto: lukas.chyle@yh.nackademin.se">lukas.chyle@yh.nackademin.se</a>
+            <a href="mailto:lukas.chyle@yh.nackademin.se">lukas.chyle@yh.nackademin.se</a>
         </div>
 
         <div>
@@ -42,9 +38,7 @@
             </p>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2246.8279616206673!2d13.182030734887697!3d55.726741899999986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465396282aa6a359%3A0x7cccf3b37f5dbd1c!2sDog%20Park!5e0!3m2!1sen!2sse!4v1678987597345!5m2!1sen!2sse"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
     </div>
