--- a/index.html
+++ b/index.html
@@ -1,29 +1,3 @@
-<!-- Startsida (spara filen som index.html)
-• Skriv ditt namn som huvudrubrik (h1).
-Formatera ditt namn med en valfri ”Google Font”.
-Ändra färg och teckenstorlek (valfri formatering).
-• Visa en bild på dig själv under ditt namn.
-Spara bilden i en undermapp som heter images
-• Skriv lite om dig själv under bilden i ett stycke (valfri formatering med CSS)
-
-
-2. Skapa en enkel horisontell navigering
-• Visa tydliga länkar till alla sidor högst upp (på alla sidor).
-Formatera länkarna med CSS.
-Ta bort understrykning och visa en annan färg vid överrullning (hover).
-3. Skapa en sidfot
-• Sidfoten ska visas längst ner på alla sidor (behöver inte vara ”sticky”)
-Lägg till en horisontell linje (hr).
-Skriv följande text efter linjen:
-Copyright &copy; 2023 – DITT NAMN – DIN E-POST
-4. Validera alla HTML-filer med W3C Validator https://validator.w3.org/
-5. All CSS-kod måste placeras i en extern CSS-fil (OBS! Enbart en CSS-fil).
-Spara filen som style.css
-6. Ladda upp alla filer till en publik GitHub-Repo.
-7. Skapa en GitHub-Sajt (GitHub Pages) eller ett valfritt hosting-konto.
-8. Ladda upp en länk till din webbplats till studentportalen.
-Deadline: 2023-03-17 kl. 14.00 (Man får lämna in innan deadline) -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -49,7 +23,7 @@ Deadline: 2023-03-17 kl. 14.00 (Man får lämna in innan deadline) -->
 
 
     <div>
-        <img src="images\crazybulldog.png" alt="Profile picture">
+        <img src="images/crazybulldog.png" alt="Profile picture">
         <p class="introduction">
             Hello there, I'm Lukas, the craziest bulldog you'll ever meet. <br> I may look tough on the
             outside, but on the inside, I'm a programming genius. <br><br> When I'm not chewing on my favorite toy bone
