--- a/portfolio.html
+++ b/portfolio.html
@@ -19,14 +19,14 @@
 
     <div class="portfolio">
         <div class="child">
-            <a href="images\aoc.jpg" target="_blank"><img src="images\aoc.jpg" alt="project image" /></a>
+            <a href="images/aoc.jpg" target="_blank"><img src="images/aoc.jpg" alt="project image"></a>
             <p>Kotlin solutions for some of Advent of Code 2022 puzzles</p>
             <a href="https://github.com/LukasChyle/Kotlin_AdventOfCode_2022/tree/master/src/main/kotlin" target="_blank"
                 rel="norefferer">GitHub Repository</a>
         </div>
 
         <div class="child">
-            <a href="images\webshop.jpg" target="_blank"><img src="images\webshop.jpg" alt="project image" /></a>
+            <a href="images/webshop.jpg" target="_blank"><img src="images/webshop.jpg" alt="project image"></a>
             <p>
                 Simple simulation of a webbshop for shoes.<br>
                 The program has several visible but unavailable funtions, that is not implemented as it was not
@@ -38,7 +38,7 @@
         </div>
 
         <div class="child">
-            <a href="images\quizgame.jpg" target="_blank"><img src="images\quizgame.jpg" alt="project image" /></a>
+            <a href="images/quizgame.jpg" target="_blank"><img src="images/quizgame.jpg" alt="project image"></a>
             <p>
                 This is a 1v1 quiz game made with simple client-server connection. <br> The project was a group task for
                 OOP-java course.</p>
@@ -47,8 +47,8 @@
         </div>
 
         <div class="child">
-            <a href="images\15puzzlegame.jpg" target="_blank"><img src="images\15puzzlegame.jpg"
-                    alt="project image" /></a>
+            <a href="images/15puzzlegame.jpg" target="_blank"><img src="images/15puzzlegame.jpg"
+                    alt="project image"></a>
             <p>
                 Fifteen Puzzle game, move tiles in grid to order them from 1 to 15. <br> Group tast for OOP-Java course.
             </p>
@@ -57,7 +57,7 @@
         </div>
 
         <div class="child">
-            <a href="images\chatroom.jpg" target="_blank"><img src="images\chatroom.jpg" alt="project image" /></a>
+            <a href="images/chatroom.jpg" target="_blank"><img src="images/chatroom.jpg" alt="project image"></a>
             <p>
                 Simple (TCP) server-client chatroom. <br> Created as exercise.</p>
             <a href="https://github.com/LukasChyle/Educational_OOP_Java/tree/master/src/sprint_4/chatroom_TCP"
