--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
     <div>
-        <img src="images/crazybulldog.png" alt="Profile picture">
+        <img src="images/crazybulldog.jpg" alt="Profile picture">
         <p class="introduction">
             Hello there, I'm Lukas, the craziest bulldog you'll ever meet. <br> I may look tough on the
             outside, but on the inside, I'm a programming genius. <br><br> When I'm not chewing on my favorite toy bone
